objects/pse__Revenue_Forecast_Version__c.object
<CustomObject>
    <customHelpPage>pse__RevenueForecastVersionHelp</customHelpPage>
    <description>Stores the records used in different versions of a revenue forecast.</description>
    <fields>
        <fullName>pse__Apex_Job_Id__c</fullName>
        <description>The ID for the Apex job executing the revenue forecast version batch process.</description>
        <externalId>true</externalId>
        <inlineHelpText>The ID for the Apex job executing the revenue forecast version batch process.</inlineHelpText>
        <label>Apex Job ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Batch_Process__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A lookup to the batch process record used for the revenue forecast version.</description>
        <inlineHelpText>A lookup to the batch process record used for the revenue forecast version.</inlineHelpText>
        <label>Batch Process</label>
        <referenceTo>pse__fflib_BatchProcess__c</referenceTo>
        <relationshipLabel>Revenue Forecast Versions</relationshipLabel>
        <relationshipName>Revenue_Forecast_Versions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Batch_Processing_Status__c</fullName>
        <description>The current status of the batch job.</description>
        <inlineHelpText>The current status of the batch job.</inlineHelpText>
        <label>Batch Processing Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>Processing</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pse__Corp_Currency__c</fullName>
        <description>The corporate currency of the org at the time the revenue forecast was run.</description>
        <inlineHelpText>The corporate currency of the org at the time the revenue forecast was run.</inlineHelpText>
        <label>Corp: Currency</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Exclude_Opportunity_Probabilities__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether probabilities were excluded from opportunity revenue forecasts when this revenue forecast version was created.</description>
        <inlineHelpText>Indicates whether probabilities were excluded from opportunity revenue forecasts when this revenue forecast version was created.</inlineHelpText>
        <label>Exclude Probability from Opportunities</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Include_Best_Case__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the opportunity best case threshold was applied when this revenue forecast version was created.</description>
        <inlineHelpText>Indicates whether the opportunity best case threshold was applied when this revenue forecast version was created.</inlineHelpText>
        <label>Include Best Case</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Include_Worst_Case__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the opportunity worst case threshold was applied when this revenue forecast version was created.</description>
        <inlineHelpText>Indicates whether the opportunity worst case threshold was applied when this revenue forecast version was created.</inlineHelpText>
        <label>Include Worst Case</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Locked__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If selected, the revenue forecast version is locked and adjustments can no longer be made.</description>
        <inlineHelpText>If selected, the revenue forecast version is locked and adjustments can no longer be made.</inlineHelpText>
        <label>Locked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Opportunity_Best_Case_Threshold__c</fullName>
        <description>The opportunity best case threshold that was specified on the active revenue forecast setup record at the time this revenue forecast version was created.</description>
        <inlineHelpText>The opportunity best case threshold that was specified on the active revenue forecast setup record at the time this revenue forecast version was created.</inlineHelpText>
        <label>Opportunity Best Case Threshold (%)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>pse__Opportunity_Expected_Case_Threshold__c</fullName>
        <description>The opportunity expected threshold that was specified on the active revenue forecast setup record at the time this revenue forecast version was created.</description>
        <inlineHelpText>The opportunity expected threshold that was specified on the active revenue forecast setup record at the time this revenue forecast version was created.</inlineHelpText>
        <label>Opportunity Expected Threshold (%)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>pse__Opportunity_Worst_Case_Threshold__c</fullName>
        <description>The opportunity worst case threshold that was specified on the active revenue forecast setup record at the time this revenue forecast version was created.</description>
        <inlineHelpText>The opportunity worst case threshold that was specified on the active revenue forecast setup record at the time this revenue forecast version was created.</inlineHelpText>
        <label>Opportunity Worst Case Threshold (%)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>pse__Status__c</fullName>
        <description>Indicates whether this revenue forecast version record relates to the current version of the forecast, or to the previously generated version.</description>
        <inlineHelpText>Indicates whether this revenue forecast version record relates to the current version of the forecast, or to the previously generated version.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Previous</fullName>
                </value>
                <value>
                    <fullName>Current</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                    <isActive>false</isActive>
                    <label>Complete</label>
                </value>
                <value>
                    <fullName>Error</fullName>
                    <isActive>false</isActive>
                    <label>Error</label>
                </value>
                <value>
                    <fullName>Pending</fullName>
                    <isActive>false</isActive>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>Processing</fullName>
                    <isActive>false</isActive>
                    <label>Processing</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pse__Version_Grouping_Primary__c</fullName>
        <description>The object that projects and opportunities are grouped under on the Review Forecast Version page.</description>
        <inlineHelpText>The object that projects and opportunities are grouped under on the Review Forecast Version page.</inlineHelpText>
        <label>Object for Version Grouping</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>pse__Region__c</fullName>
                    <default>true</default>
                    <label>Region</label>
                </value>
                <value>
                    <fullName>pse__Practice__c</fullName>
                    <label>Practice</label>
                </value>
                <value>
                    <fullName>pse__Group__c</fullName>
                    <label>Group</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Revenue Forecast Version</label>
    <nameField>
        <label>Revenue Forecast Version Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Revenue Forecast Versions</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>